<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutiteq Maps</string>
    <string name="map_error">Something went wrong, maps will not be shown</string>
    <string name="menu_search">Search</string>
    <string name="menu_download">Downloads</string>
    <string name="menu_info">About</string>
    <string name="menu_settings">Settings</string>
    <string name="lang_automatic">Automatic</string>
    <string name="lang_local">Local</string>
    <string name="lang_en">English</string>
    <string name="lang_de">German</string>
    <string name="lang_fr">French</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_it">Italian</string>
    <string name="lang_es">Spanish</string>
    <string name="lang_cn">Chinese</string>
    <string name="lang_et">Estonian</string>
    <string name="info_activity_title1">Nutiteq Maps</string>
    <string name="info_activity_title2">Credits</string>
    <string name="info_activity_desc1">Search currently requires on-line connection.\n\nYou can download per-country packages to your device and use maps entirely off-line.</string>
    <string name="info_activity_desc2"> - Maps Copyright <a href="http://www.openstreetmap.org/">OpenStreetMap Contributors.</a> License: ODbL\n\n - Nutiteq Maps SDK (<a href="https://developer.nutiteq.com">https://developer.nutiteq.com</a>)</string>
    <string name="error_gps_disabled">Sorry, but it seems that GPS is currently disabled on this device. Please enable it from device settings.</string>
    <string name="gps_settings">Settings</string>
    <string name="gps_location_not_found">Please wait for GPS location, then try again</string>
    <string name="search_hint">Search Nutiteq Maps</string>
    <string name="download_activity">Download</string>
    <string name="search_progress">Searching for</string>
    <string name="feedback">Send feedback</string>
    <string name="json_error">jSON parsing error</string>
    <string name="network_error">No online connection found. Search currently requires it.</string>
    <string name="nothing_found">Nothing found for</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="map_lang">Map language</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="package_status_available">Available</string>
    <string name="package_status_ready">Download complete</string>
    <string name="package_status_waiting">Queued</string>
    <string name="package_status_copying">Copying</string>
    <string name="package_status_downloading">Downloading</string>
    <string name="package_status_removing">Removing</string>
    <string name="package_status_paused">Paused</string>
    <string name="package_list_failed">Failed to download package list</string>
    <string name="package_failed_download">Failed to download package</string>
    <string name="notification_msg">is ready for use</string>
    <string name="notification_msg2">Failed to download</string>
    <string name="measurement">Measurement units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="notification_img_des">Notification image</string>
    <string name="external_storage_error2">External storage isn\'t available, package list can\'t be shown</string>
    <string name="no_space_msg">Sorry, but there isn\'t enough free space for this package</string>
    <string name="notification_no_space_title">wasn\'t download</string>
    <string name="notification_no_space_desc">There wasn\'t enough free space</string>
    <string name="toast_no_space_msg">There isn\'t enough free space for</string>
    <string name="toast_no_space_msg2">package</string>
    <string name="storage">Map storage folder</string>
    <string name="units_summary">Choose measurement units for maps</string>
    <string name="storage_summary">Choose storage folder for package maps</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="moving_files_error">Something went wrong!</string>
    <string name="moving_files_no_space">There isn\'t enough memory</string>
    <string name="logo">Logo</string>
    <string name="move">Moving files</string>
    <string name="search_view_text">Search Nutiteq Maps</string>
    <string name="version">v</string>
    <string name="lang_summary">Choose language for text on maps</string>
    <string name="lang">Map language</string>
    <string name="notification_msg3">Download queue:</string>
    <string name="notification_msg4">items waiting</string>
    <string name="search_list">search list</string>
    <string name="hamburger">menu button</string>
    <string name="menu_item">menu item</string>
    <string name="package_remove">Package remove</string>
    <string name="package_remove_msg">Are you sure you want to delete permanently?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pause_cancel">Pause or cancel</string>
    <string name="pause_cancel_msg">Do you want to pause or cancel this download?</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="of">of</string>
    <string name="free">free</string>
    <string name="ok">OK</string>
    <string name="pck_update">Update available</string>
    <string name="pck_update_title">Update or delete</string>
    <string name="pck_update_msg">Do you want to update or delete package?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="track_on">GPS tracking turned on</string>
    <string name="track_off">GPS tracking turned off</string>
    <string name="tracks">GPS tracking</string>
    <string name="tracks_error">Something went wrong, GPS track can\'t be saved!</string>
    <string name="tracks_battery">Battery is below 10%, GPS tracking is stopped.</string>
    <string name="track">Track</string>
    <string name="start_time">Start time:</string>
    <string name="duration">Duration:</string>
    <string name="length">Length:</string>
    <string name="no_track">No locations found for this track</string>
    <string name="no_locations">Sorry, but there should be at least two GPS locations saved to show track</string>
    <string name="track_delete_error">Something went wrong, track isn\'t deleted!</string>
    <string name="start_location">Start location:</string>
    <string name="end_location">End location:</string>
    <string name="openstreetmap_attribution">© OpenStreetMap</string>
    <string name="dw_suggestion">Download suggestion</string>
    <string name="pck_dw">Downloading of</string>
    <string name="pck_dw2">started. See Downloads menu for progress or notification.</string>
    <string name="geocode_error">Something went wrong, please try it again.</string>
    <string name="pck_up">Updating of</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="add_bookmark">Add favorite</string>
    <string name="location_bookmark_added">Favorite location is added on map</string>
    <string name="delete_bookmark">Delete favorite</string>
    <string name="location_bookmark_delete">Favorite location is removed from map</string>
    <string name="bookmark_error">Something went wrong, favorite location isn\'t saved!</string>
    <string name="bookmark_error2">Something went wrong, favorite location isn\'t removed!</string>
    <string name="bookmarks_menu">Favorite locations</string>
    <string name="bookmarks_zero">You don\'t have favorite locations</string>
    <string name="edit">Edit</string>
    <string name="options">Options</string>
    <string name="bookmark_deleted">Favorite location is deleted</string>
    <string name="bookmark_delete_error">Something went wrong, favorite location isn\'t deleted</string>
    <string name="bookmark_updated">Favorite location is updated</string>
    <string name="bookmark_updated_error">Something went wrong, favorite location isn\'t updated</string>
    <string name="buildings_3d">Buildings 3D</string>
    <string name="firebase_saving_error">Something went wrong, favorite location isn\'t saved online</string>
    <string name="bright_style">Bright style</string>
    <string name="available_bikes">AVAILABLE BIKES:</string>
    <string name="empty_docks">EMPTY DOCKS:</string>
    <string name="no_start">GPS location for start point isn\'t found yet</string>
    <string name="in">in</string>
    <string name="my_location">My location</string>
    <string name="saved_locations">Saved locations</string>

</resources>